@@ -1,3 +1,11 @@
+2003-11-08  Mitsuru Oka  <oka326@parkcity.ne.jp>
+
+	* src/sp-object.h: (SP_VERSION_*): New enum type
+	(sp_object_get_version): New method come from sp-text.c
+
+	* src/sp-object.c: (sp_object_get_version): New method,
+	I'll rewrite sp-text later.
+
 2003-11-05  Lauris Kaplinski  <lauris@kaplinski.com>
 
 	* src/sp-object.h: Put generic children link here
